# TransClip

./: .gitignore  AGENTS.md  CONTEXT.md  LICENSE  Makefile  README.md  install.sh  interview_questions.md  mypy.ini  pyperclip_test.py  pyproject.toml  requirements.txt  transclip.service
.github/: pull_request_template.md
.github/workflows/: ci.yml
backup_structure/: requirements.txt
backup_structure/transclip/: pyproject.toml  transclip.service
backup_structure/transclip/transclip/: __main__.py
desktop/: README.md  index.html  package-lock.json  package.json
desktop/src/: main.ts  recorder.ts  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: hotkey.rs  lib.rs
desktop/tests/: recorder-smoke.html
docs/: package-layout.md  pure-python-daemon-plan.md  v1-completion-audit.md  v1-live-validation.md  v1-plan.md  v1-todo.md  v2-plan.md
eval/macos/: manifest.json
eval/real-usage/: manifest.json  prompts.md  results.json
eval/v1-synthetic/: README.md  manifest.json  results.json
eval/v1-synthetic/text/: case_01.txt  case_02.txt  case_03.txt  case_04.txt  case_05.txt  case_06.txt  case_07.txt  case_08.txt  case_09.txt  case_10.txt  case_11.txt  case_12.txt  case_13.txt  case_14.txt  case_15.txt  case_16.txt  case_17.txt  case_18.txt  case_19.txt  case_20.txt  case_21.txt  case_22.txt  case_23.txt  case_24.txt  case_25.txt  warmup.txt
eval/windows/: manifest.json
granite_speach/: __init__.py  asr.py  audio.py  cleanup.py  cli.py  cli_commands.py  client.py  daemon.py  daemon_lifecycle.py  debug_capture.py  device.py  doctor.py  eval_harness.py  glossary.py  gnome_shortcut.py  history.py  models.py  notify.py  paste.py  platform_capabilities.py  recording_ops.py  service.py  service_routes.py  settings.py  timing.py  tray.py
plans/: 2026-05-19-architecture-deepening.md  2026-05-19-transclip-productization.md  2026-05-20-voice-mode-routing.md
scripts/: chatgpt_ui_ask.py  check_eval_results.py  check_v1_completion.py  desktop_recorder_smoke.py  generate_synthetic_eval.py  linux_tray_smoke.py  macos_pr_body.md  prepare_real_eval.py  publish_macos_pr.sh  record_real_eval_clip.py  record_real_eval_session.py  run_keyword_ablation.py  run_real_eval_pipeline.py  setup_gfx1151_env.sh  tauri_global_hotkey_smoke.py  tauri_paste_smoke.py  tauri_recorder_smoke.py  tauri_service_record_smoke.py
stubs/PyQt5/: __init__.pyi
stubs/PyQt5/QtCore/: __init__.pyi
stubs/PyQt5/QtGui/: __init__.pyi
stubs/PyQt5/QtWidgets/: __init__.pyi
stubs/numpy/: __init__.pyi
stubs/pynput/: keyboard.pyi
stubs/pyperclip/: __init__.pyi
stubs/torch/: __init__.pyi
tests/: __main__.py  platform_helpers.py  service_helpers.py  test_asr.py  test_audio_debug.py  test_change_model.py  test_check_eval_results.py  test_check_v1_completion.py  test_cleanup.py  test_cleanup_prompt.py  test_cleanup_prompt_menu.py  test_cli.py  test_client.py  test_config.py  test_daemon.py  test_desktop_config.py  test_device.py  test_dictation_session.py  test_doctor.py  test_download_models.py  test_eval_harness.py  test_eval_windows_manifest.py  test_gnome_shortcut.py  test_history.py  test_hotkey.py  test_hotkey_windows.py  test_key_persistence.py  test_keyword_restore.py  test_mode_routing.py  test_models.py  test_package_imports.py  test_paste.py  test_paste_focus.py  test_platform_runtime.py  test_prepare_real_eval.py  test_product.py  test_recording_ops.py  test_run_real_eval_pipeline.py  test_service.py  test_service_health.py  (+13 more)
transclip/: __init__.py  app.py  asr.py  audio.py  best_effort.py  cleanup.py  cli.py  cli_commands.py  client.py  clipboard.py  config.py  daemon.py  daemon_common.py  daemon_lifecycle.py  daemon_windows.py  debug_capture.py  device.py  dictation_session.py  doctor.py  doctor_asr.py  doctor_platform.py  download_models.py  eval_harness.py  gnome_shortcut.py  history.py  hotkey.py  hotkey_setup.py  hotkey_windows.py  install.sh  keyword_restore.py  mlx_audio_compat.py  mode_routing.py  models.py  notify.py  paste.py  paste_platform.py  paths.py  platform_capabilities.py  platform_runtime.py  product.py  (+18 more)
transclip/cli/: __init__.py  config_cmd.py  daemon_cmd.py  dispatch.py  doctor_cmd.py  eval_cmd.py  formatting.py  history_cmd.py  init_config.py  models_cmd.py  parser.py  serve.py  shortcut_cmd.py  toggle_cmd.py  transcribe_cmd.py  tray_cmd.py
transclip/daemon/: __init__.py  common.py  lifecycle.py  linux.py  macos.py  protocol.py  status.py  windows.py
transclip/desktop/hotkey/: __init__.py  common.py  linux_gnome.py  toggle_command.py  windows.py
transclip/desktop/paste/: __init__.py  focus.py  platform.py  win32.py
transclip/doctor/: __init__.py  asr.py  platform.py  types.py
transclip/models/: __init__.py  cache.py  catalog.py  prefetch.py  types.py
transclip/platform/: capabilities.py  profiles.py  runtime.py
transclip/service/: __init__.py  client.py  client_health.py  engine.py  health.py  json_response.py  routes.py  serialize.py  server.py  session.py  types.py
transclip/transclip/: app.py  download_models.py
(+15 files in other folders)
