[project]
name = "transclip"
version = "0.1.0"
description = "Local-only push-to-talk dictation with local ASR-oriented harnesses."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
audio = ["sounddevice>=0.5", "numpy>=1.26"]
models = ["transformers>=5.8", "torch>=2.9.1,<2.12", "torchaudio>=2.9.1,<2.12", "torchcodec>=0.5", "torchvision>=0.24,<0.27", "accelerate>=1.0", "soundfile>=0.12", "pillow>=10"]
mlx = ["mlx-audio[stt]>=0.4.3", "huggingface_hub>=0.27", "soundfile>=0.12"]
macos-ui = ["pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'"]
llama = ["llama-cpp-python>=0.3"]
dev = [
    "coverage[toml]>=7.10",
    "pytest>=8.4",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]
chatgpt-ui = ["playwright>=1.52"]

[project.scripts]
transclip = "transclip.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["transclip", "scripts", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.analysis]
allowed-unresolved-imports = [
    "flash_attn",
    "gi",
    "gi.repository",
    "llama_cpp",
    "mlx",
    "mlx_audio",
    "mlx_audio.stt.generate",
    "sounddevice",
]

[tool.ty.src]
include = ["transclip"]

[tool.coverage.run]
branch = true
source = ["transclip", "scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = true
