[project]
name = "transclip"
version = "0.1.0"
description = "Local-only push-to-talk dictation with local ASR-oriented harnesses."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
audio = ["sounddevice>=0.5", "numpy>=1.26"]
models = ["transformers>=4.52.1", "torch>=2.5", "torchaudio>=2.5", "torchcodec>=0.5", "torchvision>=0.20", "accelerate>=1.0", "soundfile>=0.12", "pillow>=10"]
mlx = ["mlx-audio[stt]>=0.4.3", "huggingface_hub>=0.27", "soundfile>=0.12"]
macos-ui = ["pyobjc-framework-Cocoa>=10; sys_platform == 'darwin'"]
windows-ui = ["pystray>=0.19", "pillow>=10", "keyboard>=0.13.5; sys_platform == 'win32'"]
dev = [
    "coverage[toml]>=7.10",
    "pytest>=8.4",
    "ruff>=0.12.11",
    "ty>=0.0.1a19",
]

[project.scripts]
transclip = "transclip.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["transclip", "scripts", "tests"]

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ty.src]
include = ["transclip"]

[tool.coverage.run]
branch = true
source = ["transclip", "scripts"]

[tool.coverage.report]
show_missing = true
skip_covered = true
