[project]
name = "transclip"
version = "0.1.0"
description = "A desktop application that transcribes speech to text when you hold down a key"
authors = []
dependencies = [
    "faster-whisper>=0.10.0",
    "sounddevice>=0.4.6",
    "numpy>=1.24.0",
    "pynput>=1.7.6",
    "PyQt5>=5.15.9",
    "pyperclip>=1.8.2",
    "plyer>=2.1.0",
    "types-pynput>=1.7.7",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 80
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true 